--- a/frontend/src/styles/home.css
+++ b/frontend/src/styles/home.css
@@ -1,65 +1,78 @@
 .hero {
   position: relative;
   display: grid;
-  min-height: 380px;
+  min-height: 800px;
 }
 .hero-img {
   width: 100%;
-  height: 380px;
-  object-fit: cover;
+  height: 800px;
 }
 .hero-gradient {
-  position: absolute;
+  background-image: url("../assets/find-station.jpg");
+  background-position: relative;
+  background-size: cover;
+  background-repeat: no-repeat;
+  height: 300px;
+  width: 100%;
   inset: auto 0 0 0;
-  height: 160px;
-  background: var(--grad);
-  opacity: 0.95;
-  border-top-left-radius: 24px;
-  border-top-right-radius: 24px;
+}
+.app-gradient {
+  background-image: url("../assets/app-banner.jpg");
+  background-position: relative;
+  background-size: cover;
+  background-repeat: no-repeat;
+  height: 500px;
+  width: 100%;
+  inset: auto 0 0 0;
 }
 .hero-copy {
-  position: absolute;
-  left: 24px;
-  bottom: 24px;
+  position: relative;
+  left: 80px;
   color: #fff;
   max-width: 560px;
 }
-.hero-copy h1 {
-  margin: 0 0 6px 0;
-  font-size: 2.2rem;
-  text-shadow: 0 2px 20px rgba(0, 0, 0, 0.3);
+.what-you-need-section {
+  display: flex;
+  padding: 48px 64px;
+  justify-content: center;
+  align-items: center;
+  gap: 191px;
+  align-self: stretch;
 }
-.hero-copy p {
-  margin: 0 0 14px 0;
-}
-
 .what-you-need {
-  max-width: 1100px;
-  margin: 26px auto;
-  padding: 0 16px;
+  display: flex;
+  width: 530px;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 24px;
+  align-self: stretch;
 }
 .what-you-need h2 {
+  display: grid;
+  justify-content: left;
   font-size: 1.6rem;
-  margin: 0 0 14px;
+  color: orange;
 }
 
 .feature-grid {
-  display: grid;
-  grid-template-columns: repeat(2, minmax(0, 1fr));
-  gap: 14px;
+  display: flex;
+  flex-direction: column;
+  padding: 48px 300px;
+  justify-content: right;
+  gap: 10px;
 }
 .feature-card {
-  display: grid;
-  grid-template-columns: 56px 1fr 40px;
+  display: flex;
   align-items: center;
-  gap: 12px;
+  justify-content: left;
+  gap: 15px;
   padding: 14px;
   border: 1px solid var(--border);
   border-radius: 16px;
   background: #fff;
 }
 .feature-icon {
-  font-size: 28px;
+  font-size: 25px;
 }
 .feature-body h3 {
   margin: 0 0 4px 0;
